# poe_model_example

./: README.md  pyproject.toml
poe_model_example/: main.py  train.py
tests/: test_poe_model_example.py
